# Palmeiras_News

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  teste.txt  twilio.env
.github/workflows/: pipeline.yml
app/: app.py  arguments.py  cli.py  conditions.py  constants.py  functions.py  main.py
app/cli/: bot_token_command.py  config_cli.py  delete_command.py  destiny_phone_command.py  listar_command.py  palmeiras.py  sid_command.py  token_command.py  twilio_phone_command.py
app/config/: config.env  constants.py  logging.conf  settings.py  twilio.py
app/tasks/: envia.py  formata.py  texto.py
app_test/: main.py
docs/: contrib.md  index.md
docs/API/: arguments.md  cli.md  cli_commands.md  cli_config.md  conditions.md  tasks.md
docs/Usage/: listar.md  variaveis.md
docs/js/: termynal.js
docs/stylesheet/: custom.css  termynal.css
tests/: test_app.py  test_cli.py  test_envio.py  test_format.py  test_tasks.py  test_texto.py
