[tool.poetry]
name = "palmeiras-news"
version = "0.1.0"
description = "Web Scraping que pega informações do proximo jogo do Palmeiras no site oficial, e envia pos SMS."
authors = ["LecoOliveira <lecoverde10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
requests = "^2.30.0"
twilio = "^8.2.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
blue = "^0.9.1"
isort = "^5.12.0"
mkdocs = "^1.4.3"
pytest-cov = "^4.0.0"


[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^1.0.0"
mkdocs-bootswatch = "^1.1"
mkdocs-material = "^9.1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
